--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         android:layout_marginBottom="56dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Ingrese su nombre"
+        android:text="Ingrese su nombre."
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/idTextViewTaTeTi"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
