--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/idTextViewTaTeTi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="142dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="56dp"
         android:text="Ta - Te - Ti"
-        android:textSize="48sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="48sp" />
 
-    <Button
-        android:id="@+id/buttonComenzar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="145dp"
-        android:layout_marginBottom="73dp"
-        android:text="Comenzar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupSymbols" />
 
     <TextView
-        android:id="@+id/textViewPlayer2"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="65dp"
-        android:text="An Android Machine"
-        app:layout_constraintBottom_toTopOf="@+id/radioGroupSymbols"
-        app:layout_constraintStart_toStartOf="@+id/radioGroupSymbols"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="31dp"
-        android:text="Jugador 2"
-        app:layout_constraintBottom_toTopOf="@+id/textViewPlayer2"
-        app:layout_constraintEnd_toEndOf="@+id/textViewPlayer2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextIngreseSuNombre" />
+        android:layout_marginBottom="1dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Jugador 1" />
 
     <EditText
         android:id="@+id/editTextIngreseSuNombre"
@@ -58,31 +34,38 @@
         android:layout_marginStart="4dp"
         android:layout_marginBottom="56dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Ingrese su nombre."
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/idTextViewTaTeTi"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+        android:hint="Ingrese su nombre"
+        android:layout_gravity="center_horizontal"
+        android:inputType="textPersonName" />
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:text="Jugador 1"
-        app:layout_constraintBottom_toTopOf="@+id/editTextIngreseSuNombre"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTextViewTaTeTi" />
+        android:text="Jugador 2" />
+    <TextView
+        android:id="@+id/textViewPlayer2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="An Android Machine"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="56dp"/>
+
+
+
+    <TextView
+        android:id="@+id/textViewSymbolSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jugador 1 juega con" />
+
+
+
 
     <RadioGroup
         android:id="@+id/radioGroupSymbols"
         android:layout_width="120dp"
         android:layout_height="112dp"
-        android:layout_marginStart="143dp"
-        android:layout_marginBottom="147dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginBottom="56dp">
 
         <RadioButton
             android:id="@+id/radioButton3"
@@ -98,4 +81,11 @@
             android:text="Cruces" />
     </RadioGroup>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/buttonComenzar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Comenzar" />
+
+</LinearLayout>
