--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -48,7 +48,7 @@
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_00"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -56,7 +56,7 @@
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/button_01"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -64,7 +64,7 @@
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button_02"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -77,7 +77,7 @@
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/button_10"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -85,7 +85,7 @@
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/button_11"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -93,7 +93,7 @@
             android:textSize="60dp"/>
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/button_12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -106,7 +106,7 @@
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/button_20"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -114,7 +114,7 @@
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/button_21"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -122,7 +122,7 @@
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/button_22"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -132,6 +132,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/textViewTurn"
         android:layout_width="wrap_content"
@@ -143,8 +144,8 @@
         android:id="@+id/buttonReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/textViewTurn"
+        android:layout_centerHorizontal="true"
         android:text="Reiniciar" />
     <TextView
         android:id="@+id/textViewMessage"
